--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,14 @@
-sonar.projectKey=laravel-tabungan
-sonar.projectName=Laravel Tabungan Siswa
-sonar.projectVersion=1.0
+sonar.projectKey=mhdreza17_tabungan_siswa
+sonar.organization=mhdreza17
 
-sonar.sources=app,resources,public,routes
-sonar.language=php
-sonar.inclusions=**/*.php
-sonar.exclusions=vendor/**,node_modules/**,tests/**
 
-sonar.host.url=http://localhost:9000
-sonar.token=sqa_79ca17a8c1d81827ef7814830e1065ec2120dc8b
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=tabungan_siswa
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
