latihan project newbismillah

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,13 @@
 sonar.projectKey=mhdreza17_tabungan_siswa
 sonar.organization=mhdreza17
 
+# Abaikan folder node_modules, vendor, dll
+sonar.exclusions=**/node_modules/**,**/vendor/**,**/*.js,**/*.css,**/*.json
+
+# Jangan analisis file C/C++/Objective-C
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=tabungan_siswa
